--- a/app/views/pages/new.html.erb
+++ b/app/views/pages/new.html.erb
@@ -1,9 +1,3 @@
 <h1>Свежая страница</h1>
 
-<%= simple_form_for(@page) do |f| %>
-<%= f.input :name %>
-<%= f.input :description %>
-
-<%= f.button :submit%>
-
-<% end %>
+<%= render 'form' %>
