--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
     <div class="well sidebar-nav">
     <h3>Sidebar</h3>
     <ul class="nav nav-list">
-    <li class="nav-header">Pages</li>
-    <%=@pages.each do |page| %>
+    <li class="nav-header">Pages  </li>
+    <% @pages.each do |page| %>
     <li><%= link_to page.name, page_path(page) %> </li>
     <% end %>
 
