--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,26 +29,28 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<div class="col-lg-3">
+    </div>
+  <div class="col-lg-3">
     <div class="well-sidebar-nav">
     <h3>Sidebar</h3>
     <ul class="nav nav-list">
-    <li class="nav-header">Pages  :</li>
+    <li class="nav-header">Pages</li>
 
     <% @pages.each do |page| %>
-    <li><%= link_to page.name, page_path(page) %> <br/></li>
+    
+     <li><%= link_to page.name, page_path(page) %> </li>
     <% end %>
 
     </ul>
     </div>
     </div>
+    
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </nav>
+
     <%= yield %>
   </body>
 </html>
